--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
                 <p>Seja Bem-Vindo(a) novamente. Faça login para acessar sua conta 
                 e poder fazer as configurações no seu ambiente.</p>
                 <form action="login.php" method="post" autocomplete="on">
-                    <div id="campo">
+                    <div class="campo">
                         <span class="material-symbols-outlined">
                             person
                             </span>
@@ -27,7 +27,7 @@
                         <label for="ilogin">Login</label>
 
                     </div>
-                    <div id="campo">
+                    <div class="campo">
                         <span class="material-symbols-outlined">
                             key
                             </span>
@@ -36,7 +36,7 @@
 
                     </div>
                     <input type="submit" value="Entrar">
-                    <a href="esqueci.html">
+                    <a href="esqueci.html" class="botao">
                         Equeci a senha
                         <span class="material-symbols-outlined">
                             mail
